fix: fix new #modal spacing, if no title is given

--- a/packages/dnb-ui-lib/src/components/modal/style/_modal.scss
+++ b/packages/dnb-ui-lib/src/components/modal/style/_modal.scss
@@ -229,7 +229,6 @@
     position: relative;
     z-index: 1;
 
-    padding-top: calc(var(--modal-spacing) / 2);
     padding-bottom: calc(var(--modal-spacing) * 1.75);
 
     @include allBelow(small) {
@@ -237,8 +236,13 @@
     }
   }
   &__content--drawer &__wrapper {
-    padding-top: calc(var(--modal-spacing) * 0.75);
     padding-bottom: calc(var(--modal-spacing) * 2);
+  }
+  &__title ~ &__wrapper {
+    padding-top: calc(var(--modal-spacing) / 2);
+  }
+  &__content--drawer &__title ~ &__wrapper {
+    padding-top: calc(var(--modal-spacing) * 0.75);
   }
 
   &__wrapper__inner {
